--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -19,7 +19,7 @@
     display: flex;
     justify-content: space-between;
     font-size: 18px;
-
+    
     .name {
       width: 90%;
       margin-bottom: 15px;
@@ -29,4 +29,35 @@
       width: 10%;
     }
   }
+}
+@media(max-width:600px){
+      .collection-item{
+        width:25%;
+        display: block;
+        justify-content: space-between;
+        margin-bottom: 20px;
+        
+        .image {
+          width: 95%;
+          height: 95%;
+          background-size: cover;
+          background-position: center;
+          margin-bottom: 5px;
+        }
+      
+        .collection-footer {
+          display:contents;
+          justify-content: space-between;
+          font-size: 14px;
+          
+          .name {
+            width: 90%;
+            margin-bottom: 15px;
+          }
+      
+          .price {
+            width: 10%;
+          }
+        }
+      }
 }
