--- a/src/components/preview-collection/collection-preview.styles.scss
+++ b/src/components/preview-collection/collection-preview.styles.scss
@@ -13,3 +13,15 @@
     justify-content: space-between;
   }
 }
+
+@media(max-width:600px){
+  .collection-preview {
+    display: flex;
+    margin-bottom: 10px;
+  
+    .title {
+      font-size: 14px;
+      margin-bottom: 10px;
+    }
+  }
+}
