--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -17,13 +17,22 @@
     }
   }
   .name,
+
   .quantity,
+
   .price {
     width: 23%;
   }
 
   .quantity {
-    padding-left: 20px;
+    display:flex;
+
+    .arrow{
+      cursor: pointer;
+    }
+    .value{
+      margin: 0 10px;
+    }
   }
 
   .remove-button {
