--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -28,4 +28,14 @@
     margin-left: auto;
     font-size: 36px;
   }
+  button{
+    margin-left:auto;
+    margin-top:15pt;
+  }
+  .test-warning{
+    text-align: center;
+    font-size:24px;
+    margin-top:30px;
+    color:red;
+  }
 }
