--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -1,5 +1,5 @@
 .collection-item {
-  width: 22vw;
+  width: 20vw;
   display: flex;
   flex-direction: column;
   height: 350px;
@@ -48,34 +48,47 @@
     }
   }
 }
-@media(max-width:600px){
-      .collection-item{
-        width:25%;
-        display: block;
-        justify-content: space-between;
-        margin-bottom: 20px;
-        
-        .image {
-          width: 95%;
-          height: 95%;
-          background-size: cover;
-          background-position: center;
-          margin-bottom: 5px;
+@media(max-width:900px){
+  .collection-item{
+    width:27.5vw;
+        .price{
+            width:20% !important;
         }
-      
-        .collection-footer {
-          display:contents;
-          justify-content: space-between;
-          font-size: 14px;
-          
-          .name {
-            width: 90%;
-            margin-bottom: 15px;
-          }
-      
-          .price {
-            width: 10%;
-          }
-        }
-      }
+  }
 }
+@media(max-width:600px){
+  .collection-item{
+      width:40vw;
+  }
+}
+// @media(max-width:600px){
+//       .collection-item{
+//         width:25%;
+//         display: block;
+//         justify-content: space-between;
+//         margin-bottom: 20px;
+        
+//         .image {
+//           width: 95%;
+//           height: 95%;
+//           background-size: cover;
+//           background-position: center;
+//           margin-bottom: 5px;
+//         }
+      
+//         .collection-footer {
+//           display:contents;
+//           justify-content: space-between;
+//           font-size: 14px;
+          
+//           .name {
+//             width: 90%;
+//             margin-bottom: 15px;
+//           }
+      
+//           .price {
+//             width: 10%;
+//           }
+//         }
+//       }
+// }
