--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 body{
     font-family: 'Open Sans Condensed';
     padding: 20px 60px;
+    background-color: #FFFFFF;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpolygon fill='%23dbdbdb' points='800 100 0 200 0 800 1600 800 1600 200'/%3E%3Cpolygon fill='%23b6b6b6' points='800 200 0 400 0 800 1600 800 1600 400'/%3E%3Cpolygon fill='%23929292' points='800 300 0 600 0 800 1600 800 1600 600'/%3E%3Cpolygon fill='%236d6d6d' points='1600 800 800 400 0 800'/%3E%3Cpolygon fill='%23494949' points='1280 800 800 500 320 800'/%3E%3Cpolygon fill='%23242424' points='533.3 800 1066.7 800 800 600'/%3E%3Cpolygon fill='%23000000' points='684.1 800 914.3 800 800 700'/%3E%3C/g%3E%3C/svg%3E");
+background-attachment: fixed;
+background-size: cover;
 }
 a{
     text-decoration: none;
@@ -13,6 +17,7 @@ a{
 @media(max-width:900px){
     body{
         padding:20px 20px;
+        
     }
 }
 @media(max-width:600px){
