--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -1,10 +1,13 @@
 .checkout-page {
-  width: 55%;
+  width: 80vw;
   min-height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 50px auto 0;
+  background-color: white;
+  padding:25px;
+  border-radius: 10px;
 
   .checkout-header {
     width: 100%;
