--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -7,6 +7,7 @@
   padding: 20px;
   border: 1px solid black;
   background-color: white;
+  border-radius: 5px;
   top: 90px;
   right: 40px;
   z-index: 5;
@@ -17,12 +18,32 @@
   }
   .cart-items {
     height: 240px;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    overflow: scroll;
+    overflow-y: scroll;
   }
 
   button {
     margin-top: auto;
+  }
+
+  ::-webkit-scrollbar {
+    width: 7px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
   }
 }
