--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -42,6 +42,10 @@
     cursor: pointer;
   }
   @media(max-width:600px){
+    .image-container img{
+      width:100%;
+      height:100%;
+    }
     .remove-button{
       display: flex;
       width: 15%;
