--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -5,6 +5,10 @@
   height: 350px;
   align-items: center;
   position: relative;
+  background-color: whitesmoke;
+  padding:5px;
+  border-radius: 5px;
+
 
   .image {
     width: 100%;
@@ -12,14 +16,6 @@
     background-size: cover;
     background-position: center;
     margin-bottom: 5px;
-  }
-  .custom-button{
-    width: 80%;
-    opacity: 0.7;
-    position: absolute;
-    top:255px;
-    display: none;
-
   }
 
   &:hover{
@@ -33,18 +29,20 @@
   }
   .collection-footer {
     width: 100%;
-    height: 5%;
+    height: 10%;
     display: flex;
     justify-content: space-between;
     font-size: 18px;
     
     .name {
-      width: 90%;
-      margin-bottom: 15px;
+      width: 100%;
+      margin-bottom: 15px
     }
 
     .price {
-      width: 10%;
+      width: 100%;
+      display: flex;
+      justify-content: flex-end;
     }
   }
 }
@@ -61,34 +59,3 @@
       width:40vw;
   }
 }
-// @media(max-width:600px){
-//       .collection-item{
-//         width:25%;
-//         display: block;
-//         justify-content: space-between;
-//         margin-bottom: 20px;
-        
-//         .image {
-//           width: 95%;
-//           height: 95%;
-//           background-size: cover;
-//           background-position: center;
-//           margin-bottom: 5px;
-//         }
-      
-//         .collection-footer {
-//           display:contents;
-//           justify-content: space-between;
-//           font-size: 14px;
-          
-//           .name {
-//             width: 90%;
-//             margin-bottom: 15px;
-//           }
-      
-//           .price {
-//             width: 10%;
-//           }
-//         }
-//       }
-// }
