--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -8,7 +8,11 @@
   background-color: white;
   padding:25px;
   border-radius: 10px;
-
+  @media(max-width:999px){
+    width:90vw;
+    padding:10px;
+    margin:10px auto 0;
+  }
   .checkout-header {
     width: 100%;
     padding: 10px 0;
